--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,39 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+
+
+# Dependency directories
+node_modules/
+package-lock.json
+yarn.lock
+
+# Build outputs
+/dist
+/build
+/.pnp
+.pnp.js
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and editor directories
+/.idea
+/.vscode
+*.swp
+*~
+.DS_Store
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+*copy
+
