--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   PROJECT_ID: flask-react-todo-app
-  GAR_LOCATION: europe-west2
+  GAR_LOCATION: europe-west2-docker.pkg.dev
   SERVICE: todo-api
   REGION: europe-west2
 
@@ -31,7 +31,7 @@ jobs:
       # Authenticate Docker to Google Cloud Artifact Registry
       - name: Docker Auth
         id: docker-auth
-        uses: 'docker/login-action@v1'
+        uses: 'docker/login-action@v2'
         with:
           username: 'oauth2accesstoken'
           password: '${{ steps.auth.outputs.access_token }}'
