--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -1,3 +1,4 @@
+
 name: Build and Deploy to Cloud Run
 
 on:
@@ -6,7 +7,7 @@ on:
 
 env:
   PROJECT_ID: flask-react-todo-app
-  GAR_LOCATION: europe-west2-docker.pkg.dev
+  GAR_LOCATION: europe-west2
   SERVICE: todo-api
   REGION: europe-west2
 
@@ -22,7 +23,7 @@ jobs:
 
       - name: Google Auth
         id: auth
-        uses: 'google-github-actions/auth@v0'
+        uses: google-github-actions/auth@latest
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
