--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -1,4 +1,3 @@
-
 name: Build and Deploy to Cloud Run
 
 on:
@@ -23,7 +22,7 @@ jobs:
 
       - name: Google Auth
         id: auth
-        uses: google-github-actions/auth@latest
+        uses: google-github-actions/auth@v2
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
