--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -41,8 +41,11 @@ jobs:
       - name: Build and Push Container
         run: |-
           cd api
+          echo "${{ secrets.DOCKER_SERVICE_ACCOUNT }}" > /tmp/docker-service-account.json
           docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+
+
 
       # END - Docker auth and build
 
