--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build and Push Container
         run: |-
           cd api
-          echo "${{ secrets.DOCKER_SERVICE_ACCOUNT }}" > /app/docker-service-account.json
+          echo "${{ secrets.DOCKER_SERVICE_ACCOUNT }}" > docker-service-account.json
           docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}" ./
           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}"
 
