--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,8 +4,19 @@ FROM python
 WORKDIR /app
 COPY . /app
 
-ENV GOOGLE_APPLICATION_CREDENTIALS=/app/docker-service-account.json
+# Install Cloud SQL Proxy
+RUN wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy && \
+    chmod +x cloud_sql_proxy
+
+COPY docker-service-account.json /cloudsql/key.json
+
+ENV GOOGLE_APPLICATION_CREDENTIALS=/cloudsql/key.json
+
 RUN pip3 install -r requirements.txt
 EXPOSE 5000
 
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
+
+# Start Cloud SQL Proxy & Flask app using a shell script
+COPY start.sh /start.sh
+RUN chmod +x /start.sh
+CMD ["/start.sh"]
