--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -7,14 +7,15 @@ on:
 env:
   PROJECT_ID: flask-react-todo-app
   GAR_LOCATION: europe-west2
-  SERVICE: todo-api
+  API_SERVICE: todo-api
+  UI_SERVICE: todo-ui
   REGION: europe-west2
 
 jobs:
+
   deploy:
     permissions:
       contents: 'read'
-
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -27,7 +28,6 @@ jobs:
           token_format: 'access_token'
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-      # Docker auth and build 
 
       # Authenticate Docker to Google Cloud Artifact Registry
       - name: Docker Auth
@@ -38,27 +38,47 @@ jobs:
           password: '${{ steps.auth.outputs.access_token }}'
           registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
 
+
+
+    # FLASK API
       # copy docker-service-account from secret. build, push container
-      - name: Build and Push Container
+      - name: Build and Push Flask Container
         run: |-
           cd api
           printf '%s' '${{ secrets.DOCKER_SERVICE_ACCOUNT }}' > docker-service-account.json
-          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}" ./
-          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}"
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.API_SERVICE }}/${{ env.API_SERVICE }}:${{ github.sha }}" ./
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.API_SERVICE }}/${{ env.API_SERVICE }}:${{ github.sha }}"
 
-
-
-      # Docker auth and build
-
-      - name: Deploy to Cloud Run
+      - name: Deploy Flask to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0
         with:
-          service: ${{ env.SERVICE }}
+          service: ${{ env.API_SERVICE }}
           region: ${{ env.REGION }}
-          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}
+          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.API_SERVICE }}/${{ env.API_SERVICE }}:${{ github.sha }}
 
-
-      # use the Cloud Run url output in later steps
-      - name: Show Output
+      - name: Show Flask Output
         run: echo ${{ steps.deploy.outputs.url }}
+
+
+
+    # REACT UI
+      - name: Build and Push React Container
+        run: |-
+          cd ../ui
+          printf '%s' '${{ secrets.DOCKER_SERVICE_ACCOUNT }}' > docker-service-account.json
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.UI_SERVICE }}/${{ env.UI_SERVICE }}:${{ github.sha }}" ./
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.UI_SERVICE }}/${{ env.UI_SERVICE }}:${{ github.sha }}"
+
+      - name: Deploy React to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v0
+        with:
+          service: ${{ env.UI_SERVICE }}
+          region: ${{ env.REGION }}
+          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.UI_SERVICE }}/${{ env.UI_SERVICE }}:${{ github.sha }}
+
+      - name: Show React Output
+        run: echo ${{ steps.deploy.outputs.url }}
+
+
