--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -50,7 +50,7 @@ jobs:
           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.API_SERVICE }}/${{ env.API_SERVICE }}:${{ github.sha }}"
 
       - name: Deploy Flask to Cloud Run
-        id: deploy
+        id: deploy1
         uses: google-github-actions/deploy-cloudrun@v0
         with:
           service: ${{ env.API_SERVICE }}
@@ -71,7 +71,7 @@ jobs:
           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.UI_SERVICE }}/${{ env.UI_SERVICE }}:${{ github.sha }}"
 
       - name: Deploy React to Cloud Run
-        id: deploy
+        id: deploy2
         uses: google-github-actions/deploy-cloudrun@v0
         with:
           service: ${{ env.UI_SERVICE }}
