--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -51,14 +51,14 @@ jobs:
 
       - name: Deploy Flask to Cloud Run
         id: deploy1
-        uses: google-github-actions/deploy-cloudrun@v0
+        uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: ${{ env.API_SERVICE }}
           region: ${{ env.REGION }}
           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.API_SERVICE }}/${{ env.API_SERVICE }}:${{ github.sha }}
 
       - name: Show Flask Output
-        run: echo ${{ steps.deploy.outputs.url }}
+        run: echo ${{ steps.deploy1.outputs.url }}
 
 
 
@@ -67,12 +67,14 @@ jobs:
         run: |-
           cd ui
           printf '%s' '${{ secrets.DOCKER_SERVICE_ACCOUNT }}' > docker-service-account.json
-          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.UI_SERVICE }}/${{ env.UI_SERVICE }}:${{ github.sha }}" ./
+          docker build --build-arg FLASK_APP_URL=${{ steps.deploy1.outputs.url }} -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.UI_SERVICE }}/${{ env.UI_SERVICE }}:${{ github.sha }}" ./
           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.UI_SERVICE }}/${{ env.UI_SERVICE }}:${{ github.sha }}"
+        env:
+          FLASK_APP_URL: ${{ steps.deploy1.outputs.url }}
 
       - name: Deploy React to Cloud Run
         id: deploy2
-        uses: google-github-actions/deploy-cloudrun@v0
+        uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: ${{ env.UI_SERVICE }}
           region: ${{ env.REGION }}
