--- a/ui/app/package.json
+++ b/ui/app/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "emotion-theming": "^10.0.27",
     "gh-pages": "^3.1.0",
+    "raw-loader": "^4.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
